--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,39 +1,45 @@
 <section class="mortgage-form-section">
   <header class="mortgage-header">
     <h1 class="mortgage-header-text">Mortgage Calculator</h1>
-    <a class="button-clear" href="">Clear All</a>
+    <a class="button-clear" (click)="resetForm()" href="">Clear All</a>
   </header>
 
   <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="m_amount">
+      <label for="amount" class="form-group-label ">
         Mortgage Amount
-        <input id="m_amount" type="number" formControlName="m_amount" name="m_amount"required/>
+        <input class="form-group-input input-icon-currency" id="amount" type="number" formControlName="m_amount" name="m_amount" />
       </label>
+      
+
     </div>
     <div class="form-group">
-      <label for="m_terms">Mortgage Term
-        <input id="m_terms" formControlName="m_terms" type="number" name="m_terms" />
-      </label>
-    </div>
-    <div class="form-group">
-      <label for="m_intRate">Interest Rate
-        <input id="m_intRate" formControlName="m_intRate" type="number" name="m_intRate" />
-      </label>
-    </div>
-  
-    <span>Mortage Type </span>
-    <div >
-  
-        <input id="repayment" type="radio" value="Repayment" name="m_type" formControlName="m_type">
-        <label for="repayment">Repayments</label>
-        </div>
+      <label for="terms" class="form-group-label ">Mortgage Term
         <div>
-            <input id="interestOnly" type="radio" value="InterestOnly" name="m_type"  formControlName="m_type">
-            <label for="interestOnly">Interest Only </label>
+            <input class="form-group-input" id="terms" formControlName="m_terms" type="number" name="m_terms" />Years
         </div>
+      </label>
+    </div>
+    <div class="form-group">
+      <label for="intRate" class="form-group-label ">Interest Rate
+        <input class="form-group-input input-icon-percentage" id="intRate" formControlName="m_intRate" type="number" name="m_intRate" />
+      </label>
+    </div>
   
-    <button  [disabled]="!form.valid" (click)="onSubmit()" type="submit" class="mortgage-submit">Calculate Repayments</button>
+    <span class="mortgage-type-label">Mortage Type </span>
+
+        <label [ngClass]="{'active': this.seletedMType==='Repayment'}" for="repayment" (click)="getActiveType('Repayment')" class="form-group-label form-group-radio ">
+        <input class="form-group-input" id="repayment" type="radio" value="Repayment" name="m_type" formControlName="m_type">
+        Repayments</label>
+
+
+        <label [ngClass]="{'active': this.seletedMType==='InterestOnly'}" (click)="getActiveType('InterestOnly')" for="interestOnly" class="form-group-label form-group-radio">
+            <input class="form-group-input" id="interestOnly" type="radio" value="InterestOnly" name="m_type"  formControlName="m_type">
+             Interest Only </label>
+
+  
+    <button [disabled]="!form.valid "  type="submit" class="mortgage-submit">Calculate Repayments</button>
+
   </form>
 
 </section>
