--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -1,118 +1,107 @@
 .mortgage-form-section{
-    height:100vh;
-    display: flex;
-    flex-direction: column;
-    border:5px solid pink;
+
+    min-height: fit-content;
     overflow: none;
-    padding: 1rem;
+    max-width: 100vw;
+    border:1px solid pink;
+    padding: 2rem;
+    vertical-align: center;
 
 }
-
-.mortgage-header{
+/*Header */
+.header-container{
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
 
 
 }
-.mortgage-header-text{
+.header-text{
     line-height: 1;
-    font-size: 6vw;
+    font-size:4vw;
+    letter-spacing: 1.5px;
+    font-weight: 500;
     margin-bottom: .25rem;
     color:hsl(202, 55%, 16%);
 }
 .button-clear{
     text-align: left;
-    font-size: 3vw;
+    font-size: .75em;
     color:  hsl(200, 26%, 54%);
 }
+.form-group{
 
-.mortgage-form{
-  
+    display: block;
+   
+}
+.form-group-label{
+
     display: flex;
     flex-direction: column;
-}
-
-.form-group>label{
-    display: flex;
-    flex-direction: column;
-}
-.form-group-label, .mortgage-type-label{
+    font-size: .45em;
     color:  hsl(200, 26%, 54%);
-    font-size: 3vw;
+    font-weight: bold;
+   
+}
+.form-group-input{
+
+    border-radius: 4px;
+    max-width: 100%;
+    border: .25px solid  hsl(200, 26%, 54%);
+    padding-right:  12px; 
+    line-height: 2em;
+    outline: none;
+
 }
 .form-group-radio{
-    border: .25px solid hsl(200, 26%, 54%);
-    margin: .25rem 0;
-    border-radius: 2px;
-    padding: .5rem;
-}
-.form-group-radio {
-    color:hsl(202, 55%, 16%);
-}
-
-
-.form-group-input{
-    border: .25px solid hsl(200, 26%, 54%);
-    border-radius: 2px;
-    font-size:2.5vw;
-    padding: .5rem;
+    border: .25px solid hsl(61, 70%, 52%);
+    accent-color:hsl(61, 70%, 52%) ;
+    margin: .5rem 0 ;
+    border-radius: 5px;
+    font-size:.75em;
     color:hsl(202, 55%, 16%);
     font-weight: bold;
-    margin: .5rem 0 ;
+    align-items: center;
+    padding: .35rem;
+    vertical-align: middle;
+
+}
+.form-group-input{
+    vertical-align: middle;
+    align-items: center;
  
+    padding:  0px 4px;
 }
 
-.form-group-input:focus{
-    outline: 1px solid hsl(200, 26%, 54%);
-}
-
-
-input[type="radio"]{
-    padding:1em;
-    height: 1em;
-    vertical-align: center;
-    accent-color:  hsl(61, 70%, 52%);
-    color: hsl(61, 70%, 52%);
-    border:none;
-}
-.input-icon-currency{
-    background: url("../../../../images/iconCalculator.svg") no-repeat scroll 7px 7px;
-    padding-left: 30px;
-    padding-bottom: 15px;
-
-}
-.input-icon-percentage{
-    background: url("../../../../images/percent.png") no-repeat scroll 7px 7px ;
-    background-size: 20px 20px;
-    background-position-x: 92% ;
-    padding-bottom: 15px;
-}
-.form-group-input[type="radio"]:focus{
+.input-terms{
     outline: none;
+    border: none;
+    
 }
+.form-group-radio>label{
+    vertical-align: middle;
+}
+
 .active{
     background-color: hsl(61, 70%, 52%, .25);
     border: 1px solid  hsl(61, 70%, 52%, .25);
     border-radius: 0;
 }
+
+
+/* button */
 .mortgage-submit{
-   background-color:  hsl(61, 70%, 52%) ;
-   border:none;
-   color:hsl(202, 55%, 16%);
-   border-radius: 12px;
-   width: fit-content;
-   padding: .5rem 1.5rem;
-   margin: 1rem auto;
-   font-size: 3vw;
-   font-weight: bold;
- 
-}
-.error{
-    border-color: hsl(4, 69%, 50%);
-
-}
-
+    background-color:  hsl(61, 70%, 52%) ;
+    border:none;
+    color:hsl(202, 55%, 16%);
+    border-radius: 12px;
+    width: fit-content;
+    padding: .5rem 1.5rem;
+    margin: 1rem auto;
+    font-size: 3vw;
+    font-weight: bold;
+  
+ }
 /*remove arrows in input fied */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
