--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,41 +1,43 @@
 <section class="mortgage-form-section">
-  <header class="mortgage-header">
-    <h1 class="mortgage-header-text">Mortgage Calculator</h1>
+  <header class="header-container">
+    <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="">Clear All</a>
   </header>
 
   <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
+    <div class="col-md-12 form-group">
       <label for="amount" class="form-group-label ">
         Mortgage Amount
-        <input class="form-group-input input-icon-currency" id="amount" type="number" formControlName="m_amount" name="m_amount" />
+        <input class="form-group-input" id="amount" type="number" formControlName="m_amount" name="m_amount" />
       </label>
-      
-
-    </div>
-    <div class="form-group">
+    </div>		
+    <div class="col-md-12 form-group">
       <label for="terms" class="form-group-label ">Mortgage Term
-        <div>
-            <input class="form-group-input" id="terms" formControlName="m_terms" type="number" name="m_terms" />Years
+        <div class=" col-md-12 form-group-input">
+
+            <input class="form-group-input input-terms" id="terms" formControlName="m_terms" type="number" name="m_terms" />Years
         </div>
+
       </label>
     </div>
-    <div class="form-group">
+    <div class="col-md-12 form-group">
       <label for="intRate" class="form-group-label ">Interest Rate
         <input class="form-group-input input-icon-percentage" id="intRate" formControlName="m_intRate" type="number" name="m_intRate" />
       </label>
     </div>
   
+    
     <span class="mortgage-type-label">Mortage Type </span>
-
-        <label [ngClass]="{'active': this.seletedMType==='Repayment'}" for="repayment" (click)="getActiveType('Repayment')" class="form-group-label form-group-radio ">
+    <div [ngClass]="{'active': this.seletedMType==='Repayment'}"  (click)="getActiveType('Repayment')" class="col-md-12 form-group-radio">
+        <label  for="repayment" class="">
         <input class="form-group-input" id="repayment" type="radio" value="Repayment" name="m_type" formControlName="m_type">
         Repayments</label>
-
-
-        <label [ngClass]="{'active': this.seletedMType==='InterestOnly'}" (click)="getActiveType('InterestOnly')" for="interestOnly" class="form-group-label form-group-radio">
+        </div>
+        <div [ngClass]="{'active': this.seletedMType==='InterestOnly'}" (click)="getActiveType('InterestOnly')" class="col-md-12 form-group-radio">
+        <label  for="interestOnly" class="">
             <input class="form-group-input" id="interestOnly" type="radio" value="InterestOnly" name="m_type"  formControlName="m_type">
              Interest Only </label>
+             </div>
 
   
     <button [disabled]="!form.valid "  type="submit" class="mortgage-submit">Calculate Repayments</button>
