updated mortgage-results html and css file

--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -1,1 +1,27 @@
-<p>mortgage-results works!</p>
+<div class="container">
+   <div class="results-header">
+    <h1 class="results-header-text">Your Results</h1>
+   </div>
+   <div class="results-info">
+    <p>
+        Your results are shown below based on the informatio you provided. To adjust the results, edit the form and click "calcualte repayments" again.
+    </p>
+   </div>
+
+   <div class="results-container">
+    <div class="results-payment">
+        <p class="results-title">Your monthly repayments</p>
+        <h2 class="results-monthly">
+            1,797.74
+        </h2>
+    </div>
+    <br>
+    <div class="results-container-totalAmount">
+        <p class="results-title">Total you'll repay over the term</p>
+        <h5 class="results-totalAmount">
+            539,322.94
+
+        </h5>
+    </div>
+   </div>
+</div>
