--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -1,10 +1,6 @@
-.mortgage-form-section{
-
-    height: 100vh;
-    width: 75vw;
+.container{
+    padding: 1rem 2rem;
     overflow: none;
-
-    padding: 2rem 1.25rem;
 
 }
 /*Header */
@@ -47,9 +43,14 @@
     border-radius: 4px;
     max-width: 100%;
     border: .25px solid  hsl(200, 26%, 54%);
-    padding-left:  4px 12px; 
+
     line-height: 2em;
     outline: none;
+    vertical-align: middle;
+    align-items: center;
+    padding:  0px 12px;
+    font-weight: bold;
+    height: 40px;
 
 }
 .form-div-radio{
@@ -69,19 +70,13 @@
     vertical-align: middle;
 
 }
-.form-group-input{
-    vertical-align: middle;
-    align-items: center;
-    padding:  0px 70px;
-    font-weight: bold;
-    height: 40px;
-}
 
 .input-terms{
     outline: none;
     border: transparent;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
+    width: 65%;
 }
 .input-icon-currency{
     background: url("../../../../images/iconCalculator.svg") no-repeat scroll 7px 7px;
