--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,4 +1,4 @@
-<section class="mortgage-form-section">
+<section class="container">
   <header class="header-container">
     <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="">Clear All</a>
