added css to mortgage-container

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -5,7 +5,7 @@
   </header>
 
   <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="col-md-12 form-group">
+    <div class=" form-group">
       <label for="amount" class="form-group-label">
         Mortgage Amount
         
@@ -18,10 +18,10 @@
         />
       </label>
     </div>
-    <div class="col-md-12 form-group">
+    <div class="form-group">
       <label for="terms" class="form-group-label"
         >Mortgage Term
-        <div class="col-md-12 form-group-input form-group-input-m_terms">
+        <div class=" form-group-input form-group-input-m_terms">
           <input
             class="form-group-input input-terms"
             id="terms"
@@ -32,7 +32,7 @@
         </div>
       </label>
     </div>
-    <div class="col-md-12 form-group">
+    <div class=" form-group">
       <label for="intRate" class="form-group-label"
         >Interest Rate
         <input
