--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -1,14 +1,15 @@
 .container{
-    padding: 1rem 2rem;
-    overflow: none;
+    width: 100%;
 
 }
+
+
 /*Header */
 .header-container{
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
-
+    
 
 }
 .header-text{
