--- a/src/app/mortage/mortage.component.html
+++ b/src/app/mortage/mortage.component.html
@@ -1,2 +1,8 @@
-<app-mortage-form/>
-<app-mortgage-results/>
+<div class="container">
+    <div class="container2">
+
+        <app-mortage-form/>
+        <app-mortgage-results/>
+    </div>
+    
+</div>
