--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -2,8 +2,8 @@
    <div class="results-header">
     <h1 class="results-header-text">Your Results</h1>
    </div>
-   <div class="results-info">
-    <p>
+   <div class="results-info-div">
+    <p class="results-info">
         Your results are shown below based on the informatio you provided. To adjust the results, edit the form and click "calcualte repayments" again.
     </p>
    </div>
