--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -1,5 +1,6 @@
 .container{
     width: 100%;
+    /* border:4px solid salmon; */
 
 }
 
@@ -25,11 +26,13 @@
     font-size: .75em;
     color:  hsl(200, 26%, 54%);
 }
-.form-group{
 
-    display: block;
-   
+
+.form-group{
+    /* border: 4px solid pink; */
+
 }
+
 .form-group-label{
 
     display: flex;
@@ -42,9 +45,9 @@
 .form-group-input{
 
     border-radius: 4px;
-    max-width: 100%;
-    border: .25px solid  hsl(200, 26%, 54%);
-
+    
+    border: 1px solid  hsl(200, 26%, 54%);
+   
     line-height: 2em;
     outline: none;
     vertical-align: middle;
@@ -54,10 +57,8 @@
     height: 40px;
 
 }
-.form-div-radio{
-    margin: .25em 0;
-    color:hsl(200, 26%, 54%);
-}
+
+
 .form-group-radio{
     border: .25px solid hsl(200, 26%, 54%);
     accent-color:hsl(61, 70%, 52%) ;
@@ -72,12 +73,14 @@
 
 }
 
-.input-terms{
+.input-term{
     outline: none;
-    border: transparent;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
     width: 65%;
+    border: none;
+    margin-right: 6px;
+
 }
 .input-icon-currency{
     background: url("../../../../images/iconCalculator.svg") no-repeat scroll 7px 7px;
@@ -100,7 +103,9 @@
 .form-group-input-m_terms{
     background-color: hsl(203, 41%, 72%, .25);
     padding: 0;
+    height: 100%;
     font-size: 12px;
+    outline: none;
 }
 .mortgage-type-label{
     font-size:.75em;
@@ -130,10 +135,10 @@
     width: fit-content;
     padding: .5rem 1.5rem;
     margin: 1rem auto;
-    font-size: 3vw;
+    font-size: 20px;
     font-weight: bold;
-    align-items: center;
-    justify-self: center;
+margin: 0 auto;
+    max-width: fit-content;
   
  }
 /*remove arrows in input fied */
@@ -177,4 +182,44 @@ input[type="radio"]:checked:before {
 input[type="radio"]:checked {
 
     background-color:  hsl(61, 70%, 52%) ;
+}
+
+
+@media only screen and (min-width: 600px) 
+{
+    
+    .mortgage-form{
+        display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: max-content;
+    grid-column-gap: 12px;
+    
+    margin:1em 2em;
+    }
+    
+.form-group:nth-child(1) {
+    grid-column: span 2 / span 2;
+  
+}
+
+.form-group:nth-child(2) {
+    grid-row-start: 2;
+}
+
+.form-group:nth-child(3)  {
+    grid-row-start: 2;
+}
+
+.form-group:nth-child(4) {
+
+    grid-column: span 2 / span 2;
+    
+}
+.form-group:nth-child(5) {
+
+    grid-column: span 2 / span 2;
+   margin: auto;
+    
+}
+
 }
