--- a/src/app/mortage/mortgage-results/mortgage-results.component.css
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.css
@@ -1,14 +1,15 @@
 .container{
 
     overflow: none;
-    padding: 1rem 2rem;
+    height: 100%;
+    padding:1em 2em; 
     background-color: hsl(202, 55%, 16%);
 }
 
 .results-header{
-
+    
     padding: 0;
-  
+    
 }
 .results-header-text{
     font-size:20px;
@@ -18,6 +19,8 @@
     height: 50px;
 }
 .results-info{
+    /* border:5px solid blue;  */
+    max-width: 700px;
     color:hsl(200, 26%, 54%);
     font-weight: 500;
 }
@@ -33,7 +36,7 @@
     border-top: 6px solid  hsl(61, 70%, 52%);
     margin: 1.5em 0 ;
     padding: 1em 1em 0 1em;
-
+    
 }
 
 .results-title{
@@ -50,4 +53,8 @@
 .results-container-totalAmount{
     border-top: 1px solid hsl(202, 86%, 94%, 0.75);
     padding-top: 2rem;
+    /* border:5px solid blue;  */
+}
+.results-payment{
+    /* border: 5px solid blue; */
 }
