--- a/src/app/mortage/mortgage-results/mortgage-results.component.css
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.css
@@ -1,9 +1,13 @@
 .container{
 
     overflow: none;
-    height: 100%;
+    
+  
     padding:1em 2em; 
     background-color: hsl(202, 55%, 16%);
+    border-top-right-radius:20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 100px;
 }
 
 .results-header{
