--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,11 @@
 }
 
 body{
+   border:12px solid pink;
+  height: 100vh;
    display: flex;
-  align-items: center;
-  justify-content: center;
+   align-items: center;
+   justify-content: center;
+   margin: auto;
+  background:#E7F4FC;
 }
