--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -1,7 +1,9 @@
 .container{
     width: 100%;
     /* border:4px solid salmon; */
-
+    padding: 1em 2em;
+    
+   
 }
 
 
@@ -188,6 +190,14 @@ input[type="radio"]:checked {
 
 @media only screen and (min-width: 600px) 
 {
+    .container{
+        margin: 0 auto;
+        height: 100%;
+        display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    }
     .header-text{
         font-size: 26px;
     }
@@ -197,7 +207,7 @@ input[type="radio"]:checked {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: max-content;
     grid-column-gap: 12px;
-    
+
     margin:1em 2em;
     }
     
