--- a/src/app/mortage/mortage.component.css
+++ b/src/app/mortage/mortage.component.css
@@ -5,11 +5,12 @@
     border-radius: 20px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 
+
 }
 
 @media only screen and (min-width: 600px) {
     .container{
         display: flex;
-
+        height: 50vh;
     }
 }
