--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -2,7 +2,7 @@
     width: 100%;
     /* border:4px solid salmon; */
     padding: 1em 2em;
-    
+    /* border:3px solid salmon; */
    
 }
 
@@ -188,11 +188,11 @@ input[type="radio"]:checked {
 }
 
 
-@media only screen and (min-width: 600px) 
+@media only screen and (min-width:  768px) 
 {
     .container{
         margin: 0 auto;
-        height: 100%;
+    
         display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -204,10 +204,10 @@ input[type="radio"]:checked {
     
     .mortgage-form{
         display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2);
     grid-template-rows: max-content;
     grid-column-gap: 12px;
-
+    grid-auto-columns: minmax(10px, auto);
     margin:1em 2em;
     }
     
@@ -217,11 +217,14 @@ input[type="radio"]:checked {
 }
 
 .form-group:nth-child(2) {
-    grid-row-start: 2;
+
+
+
 }
 
 .form-group:nth-child(3)  {
-    grid-row-start: 2;
+
+    
 }
 
 .form-group:nth-child(4) {
