--- a/src/app/mortage/mortage.component.css
+++ b/src/app/mortage/mortage.component.css
@@ -1,6 +1,5 @@
 
 .container{
-    /* border:3px solid salmon; */
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
@@ -8,7 +7,7 @@
 
 @media only screen and (min-width: 768px) {
     .container{
-        /* border:3px solid salmon; */
+        border:3px solid salmon;
         display: flex;
         height: 50vh;
     }
