--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -9,22 +9,24 @@
       
       <label for="amount" class="form-group-label">
         Mortgage Amount
-        
+        <div class=" input-group-container  input-group-container-amount ">
+          <img src="../../.././assets/images/" alt="">
         <input
-          class=" form-group-input "
+          class=" input  input-amount "
           id="amount"
           type="number"
           formControlName="m_amount"
           name="m_amount"
         />
+        </div>
       </label>
     </div>
     <div class="form-group">
       <label for="terms" class="form-group-label"
         >Mortgage Term
-        <div class=" form-group-input form-group-input-m_terms">
+        <div class=" input-group-container  input-group-container-terms">
           <input
-            class="form-group-input input-term"
+            class="input input-term"
             id="terms"
             formControlName="m_terms"
             type="number"
@@ -34,15 +36,17 @@
       </label>
     </div>
     <div class=" form-group">
-      <label for="intRate" class="form-group-label"
-        >Interest Rate
+      <label for="intRate" class="form-group-label">Interest Rate
+        <div class=" input-group-container  input-group-container-rate">
         <input
-          class="form-group-input input-icon-percentage"
+          class="input input-rate"
           id="intRate"
           formControlName="m_intRate"
           type="number"
           name="m_intRate"
         />
+        <img src="../../../assets/images/iconPercentage.svg" alt="">
+        </div>
       </label>
     </div>
 
@@ -55,7 +59,7 @@
       >
         <label for="repayment" class="">
           <input
-            class=" form-group-input"
+            class=" input"
             id="repayment"
             type="radio"
             value="Repayment"
@@ -72,7 +76,7 @@
       >
         <label for="interestOnly" class="">
           <input
-            class="form-group-input"
+            class="input"
             id="interestOnly"
             type="radio"
             value="Interest Only"
