--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -4,7 +4,7 @@
    </div>
    <div class="results-info-div">
     <p class="results-info">
-        Your results are shown below based on the informatio you provided. To adjust the results, edit the form and click "calcualte repayments" again.
+        Your results are shown below based on the information you provided. To adjust the results, edit the form and click "calculate repayments" again.
     </p>
    </div>
 
