added eruo asset

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -10,7 +10,7 @@
       <label for="amount" class="form-group-label">
         Mortgage Amount
         <div class=" input-group-container  input-group-container-amount ">
-          <img src="../../.././assets/images/" alt="">
+          <img src="../../../assets/images/pound-sign.png" alt="">
         <input
           class=" input  input-amount "
           id="amount"
