--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-   <div class="results-header">
+<section class="container">
+
+   <header class="header-container">
     <h1 class="results-header-text">Your Results</h1>
-   </div>
+   </header>
    <div class="results-info-div">
     <p class="results-info">
         Your results are shown below based on the information you provided. To adjust the results, edit the form and click "calculate repayments" again.
@@ -24,4 +25,4 @@
         </h5>
     </div>
    </div>
-</div>
+</section>
