--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -3,7 +3,7 @@
     /* border:4px solid salmon; */
     padding: 1em 2em;
     /* border:3px solid salmon; */
-   
+
 }
 
 
@@ -12,6 +12,7 @@
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
+    justify-content: start;
     
 
 }
@@ -227,11 +228,7 @@ input[type='radio']:before {
 }
 
 input[type="radio"]:checked:before {
-
-
-    
-    background-color:  hsl(61, 70%, 52%) ;
-    
+    background-color:  hsl(61, 70%, 52%) ;    
 }
 
 input[type="radio"]:checked {
@@ -250,6 +247,9 @@ button:disabled{
     flex-direction: column;
     margin: 0 auto;
     justify-content: center;
+    }
+    .header-container{
+        height: 50px;
     }
     .header-text{
         font-size: 26px;
