Updated icons for form calculator

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -10,7 +10,7 @@
       <label for="amount" class="form-group-label">
         Mortgage Amount
         <div class=" input-group-container  input-group-container-amount ">
-          <img src="../../../assets/images/pound-sign.png" alt="">
+          <span>&#8364;</span>
         <input
           class=" input  input-amount "
           id="amount"
@@ -45,7 +45,7 @@
           type="number"
           name="m_intRate"
         />
-        <img src="../../../assets/images/iconPercentage.svg" alt="">
+        <span>%</span>
         </div>
       </label>
     </div>
