--- a/src/app/mortage/mortage.component.css
+++ b/src/app/mortage/mortage.component.css
@@ -2,6 +2,7 @@
 .container{
     background-color: white;
     border-radius: 20px;
+    margin: 0 auto;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
