updated mortgage service functions

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -17,6 +17,8 @@
           type="number"
           formControlName="m_amount"
           name="m_amount"
+          value="m_amount | currency : ' ' : 'symbol' : '1.0-0'"
+        
         />
         </div>
       </label>
