--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -3,16 +3,16 @@
     /* border:4px solid salmon; */
     padding: 1em 2em;
     /* border:3px solid salmon; */
+    margin: 0 auto;
 
 }
 
 
 /*Header */
 .header-container{
-    margin: 1rem 0;
+
     display: flex;
     flex-direction: column;
-    justify-content: start;
     
 
 }
